--- a/project.config.json
+++ b/project.config.json
@@ -50,7 +50,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -64,6 +64,13 @@
 					"name": "pages/category/index",
 					"pathName": "pages/category/index",
 					"query": "id=1005000",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/detail/index",
+					"pathName": "pages/detail/index",
+					"query": "id=1147048",
 					"scene": null
 				}
 			]
